style fix: made preview and editor align in a row

--- a/components/PlaintextEditor/style.css
+++ b/components/PlaintextEditor/style.css
@@ -1,9 +1,8 @@
 .editor {
-  width: 640px;
-  background-color: var(--color-white);
-  padding: 20px;
+  width: 100%;
+  padding: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
 }
